# xml-boiler-ada

./: .gitignore  Makefile  Makefile.am  README  TODO  configure.ac  libxmlboiler.gpr
src/: boiler-auxiliary-string_formatter.adb  boiler-auxiliary-string_formatter.ads  boiler-auxiliary.ads  boiler-config.ads  boiler-config.ads.in  boiler-directories.adb  boiler-directories.ads  boiler-global.adb  boiler-global.ads  boiler-options.ads  boiler-rdf_format-resource-parser.adb  boiler-rdf_format-resource-parser.ads  boiler-rdf_format-resource.adb  boiler-rdf_format-resource.ads  boiler-rdf_format.adb  boiler-rdf_format.ads  boiler-rdf_recursive_descent-enums.adb  boiler-rdf_recursive_descent-enums.ads  boiler-rdf_recursive_descent-literals.adb  boiler-rdf_recursive_descent-literals.ads  boiler-rdf_recursive_descent.adb  boiler-rdf_recursive_descent.ads  boiler.ads
src/bindings/: gettext.adb  gettext.ads  gettext_lib.adb  gettext_lib.ads  glibc-locale.adb  glibc-locale.ads  glibc.adb  glibc.ads
